Get most of the way to private secrets + https

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -30,7 +30,7 @@ provisioning = /etc/grafana/provisioning
 #################################### Server ####################################
 [server]
 # Protocol (http or https)
-protocol = http
+protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
 ;http_addr =
@@ -59,8 +59,8 @@ root_url = http://localhost:3003
 ;enable_gzip = false
 
 # https certs & key file
-;cert_file =
-;cert_key =
+cert_file = /etc/secrets/gf_cert.pem
+cert_key = /etc/secrets/gf_key.pem
 
 #################################### Database ####################################
 [database]
@@ -71,9 +71,9 @@ root_url = http://localhost:3003
 type = mysql
 host = 127.0.0.1:3306
 name = grafana
-user = grafana
+user = $__env{MYSQL_GRAFANA_USER}
 # If the password contains # or ; you have to wrap it with trippel quotes. Ex """#password;"""
-password = grafana
+password = $__env{MYSQL_GRAFANA_PW}
 
 # Use either URL or the previous fields to configure the database
 # Example: mysql://user:secret@host:port/database
