--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -206,19 +206,19 @@
 
 [http]
   # Determines whether HTTP endpoint is enabled.
-  # enabled = true
+  enabled = true
 
   # The bind address used by the HTTP service.
-  # bind-address = ":8086"
+  bind-address = ":8086"
 
   # Determines whether HTTP authentication is enabled.
-  # auth-enabled = false
+  auth-enabled = true
 
   # The default realm sent back when issuing a basic auth challenge.
   # realm = "InfluxDB"
 
   # Determines whether HTTP request logging is enable.d
-  # log-enabled = true
+  log-enabled = true
 
   # Determines whether detailed write logging is enabled.
   # write-tracing = false
