--- a/supervisord/supervisord.conf
+++ b/supervisord/supervisord.conf
@@ -9,14 +9,14 @@ command = bash -c "find /var/lib/mysql -type f -exec touch {} \; && /etc/init.d/
 priority = 3
 command = bash -c "/etc/init.d/influxdb start && sleep 5"
 
-[program:telegraf]
-priority = 4
-command = bash -c "sleep 30 && /etc/init.d/telegraf start"
+# [program:telegraf]
+# priority = 4
+# command = bash -c "sleep 30 && /etc/init.d/telegraf start"
 
 [program:grafana]
-priority = 5
+priority = 4
 command = /etc/init.d/grafana-server start
 
 [program:chronograf]
-priority = 6
+priority = 5
 command = /usr/bin/chronograf -r
