Get through https certificate setup

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -59,8 +59,8 @@ root_url = http://localhost:3003
 ;enable_gzip = false
 
 # https certs & key file
-cert_file = /etc/secrets/gf_cert.pem
-cert_key = /etc/secrets/gf_key.pem
+cert_file = $__env{GRAFANA_CERT}
+cert_key = $__env{GRAFANA_CERT_KEY}
 
 #################################### Database ####################################
 [database]
