--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -192,10 +192,10 @@
   bind-address = ":8083"
 
   # Whether the admin service should use HTTPS.
-  # https-enabled = false
+  # https-enabled = true
 
   # The SSL certificate used when HTTPS is enabled.
-  # https-certificate = "/etc/ssl/influxdb.pem"
+  # https-certificate = [Set up in setup_influx.sh as environment var]
 
 ###
 ### [http]
@@ -228,13 +228,13 @@
   # pprof-enabled = true
 
   # Determines whether HTTPS is enabled.
-  # https-enabled = false
+  https-enabled = true
 
   # The SSL certificate to use when HTTPS is enabled.
-  # https-certificate = "/etc/ssl/influxdb.pem"
+  # https-certificate = [Set up in setup_influx.sh as environment var]
 
   # Use a separate private key location.
-  # https-private-key = ""
+  # https-private-key = [Set up in setup_influx.sh as environment var]
 
   # The JWT auth shared secret to validate requests using JSON web tokens.
   # shared-sercret = ""
