--- a/grafana/provisioning/datasources/influxDB.yml
+++ b/grafana/provisioning/datasources/influxDB.yml
@@ -1,9 +1,11 @@
+apiVersion: 1
+
 datasources:
   - name: InfluxDB
     type: influxdb
     access: proxy
-    database: $INFLUXDB_DATABASE_NAME
-    url: http://localhost:8086
+    database: ${INFLUXDB_DATABASE_NAME}
+    url: https://${SERVER_URL}:8086
     isDefault: true
-    user: $INFLUXDB_USER
-    password: $INFLUXDB_PASSWORD
+    user: ${INFLUXDB_USER}
+    password: ${INFLUXDB_PASSWORD}
