Fix to include grafana username/password in configuration file

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -128,10 +128,10 @@ password = $__env{MYSQL_GRAFANA_PW}
 #################################### Security ####################################
 [security]
 # default admin user, created on startup
-admin_user = root
+admin_user = $__env{GRAFANA_ADMIN_USER}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-admin_password = root
+admin_password = $__env{GRAFANA_ADMIN_PASSWORD}
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
