Variable port numbers

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -36,7 +36,7 @@ protocol = https
 ;http_addr =
 
 # The http port  to use
-http_port = 3003
+http_port = $__env{GRAFANA_PORT}
 
 # The public facing domain name used to access grafana from a browser
 ;domain = localhost
@@ -47,7 +47,7 @@ http_port = 3003
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-root_url = http://localhost:3003
+root_url = https://$__env{SERVER_URL}:$__env{GRAFANA_PORT}
 
 # Log web requests
 ;router_logging = false
