--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -186,10 +186,10 @@
 
 [admin]
   # Determines whether the admin service is enabled.
-  enabled = true
+  enabled = false
 
   # The default bind address used by the admin service.
-  bind-address = ":8083"
+  # bind-address = ":8083"
 
   # Whether the admin service should use HTTPS.
   # https-enabled = true
@@ -209,7 +209,7 @@
   enabled = true
 
   # The bind address used by the HTTP service.
-  bind-address = ":8086"
+  # bind-address = [Set up in setup_influx.sh as environment var]
 
   # Determines whether HTTP authentication is enabled.
   auth-enabled = true
