--- a/grafana/provisioning/datasources/influxDB.yml
+++ b/grafana/provisioning/datasources/influxDB.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 datasources:
   - name: InfluxDB
     type: influxdb
-    access: proxy
+    access: direct
     database: ${INFLUXDB_DATABASE_NAME}
     url: https://${SERVER_URL}:${INFLUXDB_PORT}
     isDefault: true
